# LiarsBar

./: .gitignore  CMakeLists.txt  common.h
include/: common.h  ipc_interface.h  logic.h
src/: CMakeLists.txt  client.c  logic.c  server.c
src/ipc/: pipe_implementation.c  socket_implementation.c
